fix links use relative path, remove discord, add theerebusai.com link

--- a/www/index.html
+++ b/www/index.html
@@ -24,12 +24,12 @@
                 </p>
 
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-8">
-                    <a href="https://toad.chrypnotoad.com" class="bg-green-900 bg-opacity-50 rounded-lg p-6 hover:bg-opacity-70 transition-all">
+                    <a href="/toad" class="bg-green-900 bg-opacity-50 rounded-lg p-6 hover:bg-opacity-70 transition-all">
                         <h3 class="text-2xl font-bold text-green-400 mb-2">$TOAD Token</h3>
                         <p class="text-white">Contract Address:</p>
                         <p class="text-sm text-green-400 break-all">7xn2T1x7xw5quHmzy2YvFWyFUNwp75fsw5bxiXGRpump</p>
                     </a>
-                    <a href="https://nft.chrypnotoad.com" class="bg-green-900 bg-opacity-50 rounded-lg p-6 hover:bg-opacity-70 transition-all">
+                    <a href="/nft" class="bg-green-900 bg-opacity-50 rounded-lg p-6 hover:bg-opacity-70 transition-all">
                         <h3 class="text-2xl font-bold text-green-400 mb-2">ChrypnoToads NFT</h3>
                         <p class="text-white">Official NFT Collection</p>
                         <p class="text-sm text-green-400">Explore the Collection</p>
@@ -41,11 +41,7 @@
                        class="text-green-400 hover:text-green-300" target="_blank">
                         Twitter
                     </a>
-                    <a href="https://discord.gg/your-discord" 
-                       class="text-green-400 hover:text-green-300" target="_blank">
-                        Discord
-                    </a>
-                    <a href="https://erebus.chrypnotoad.com" 
+                    <a href="https://theerebusai.com/" 
                        class="text-green-400 hover:text-green-300" target="_blank">
                         Erebus
                     </a>
