refactor website structure and update content across multiple pages

--- a/nft/index.html
+++ b/nft/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChrypnoToads NFT Collection</title>
+    <title>🐸 nft</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <style>
         @keyframes float {
@@ -28,55 +28,41 @@
     <div class="container mx-auto px-4 py-8">
         <div class="max-w-4xl mx-auto bg-black bg-opacity-50 rounded-xl p-8 backdrop-filter backdrop-blur-lg">
             <div class="text-center mb-8">
-                <h1 class="text-6xl font-bold text-green-400 mb-4">ChrypnoToads 🐸</h1>
+                <h1 class="text-6xl font-bold text-green-400 mb-4">🐸 Non Fungable Toads 🐸</h1>
                 <p class="text-xl text-green-200 mb-4 whitespace-pre-line">
-🐸 ChrypnoToads - The Official NFT Collection by CHRYPNOTOAD
+The Official NFT Collections for $Toad
 
-• Money Rain Toads
-• 4.20% Total Royalties
-• 1.51% Goes to Minter!
-• Part of the $TOAD ecosystem
+• perpetual royalties for minters
+• minting builds liquidity for $TOAD
 
-When toads make it rain, collectors profit.
+"When toads make it rain, collectors profit.""
                 </p>
 
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-8">
                     <div class="bg-green-900 bg-opacity-50 rounded-lg p-6">
                         <h3 class="text-2xl font-bold text-green-400 mb-2">Mint Price</h3>
-                        <p class="text-4xl font-bold text-white">0.069 SOL</p>
+                        <p class="text-4xl font-bold text-white">tbd</p>
                     </div>
                     <div class="bg-green-900 bg-opacity-50 rounded-lg p-6">
                         <h3 class="text-2xl font-bold text-green-400 mb-2">Supply</h3>
-                        <p class="text-4xl font-bold text-white">69 Toads</p>
+                        <p class="text-4xl font-bold text-white">tbd</p>
                     </div>
                 </div>
 
                 <div class="bg-green-900 bg-opacity-50 rounded-lg p-6 mb-8">
                     <h3 class="text-2xl font-bold text-green-400 mb-4">Royalty Distribution</h3>
-                    <div class="grid grid-cols-2 gap-4">
-                        <div>
-                            <p class="text-xl text-white mb-2">Creator</p>
-                            <p class="text-3xl font-bold text-green-400">2.69%</p>
-                        </div>
+                    <div class="grid grid-cols-1 gap-4">
                         <div>
                             <p class="text-xl text-white mb-2">Minter</p>
-                            <p class="text-3xl font-bold text-green-400">1.51%</p>
+                            <p class="text-3xl font-bold text-green-400">tbd</p>
                         </div>
                     </div>
                 </div>
 
-                <div class="flex justify-center space-x-4 mt-8">
-                    <a href="https://magiceden.io/marketplace/chrypnotoads" 
+                <div class="flex justify-center space-x-4 mt-8 mb-8">
+                    <a href="https://uncut.network/user/4295813159" 
                        class="text-green-400 hover:text-green-300" target="_blank">
-                        Magic Eden
-                    </a>
-                    <a href="https://twitter.com/ChryptoToad" 
-                       class="text-green-400 hover:text-green-300" target="_blank">
-                        Twitter
-                    </a>
-                    <a href="https://tensor.trade/trade/chrypnotoads" 
-                       class="text-green-400 hover:text-green-300" target="_blank">
-                        Tensor
+                        Art on Polygon
                     </a>
                 </div>
 
