--- a/toad/index.html
+++ b/toad/index.html
@@ -1,53 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>$TOAD Token - CHRYPNOTOAD</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-</head>
-<body class="bg-gradient-to-br from-green-900 via-green-800 to-green-900 min-h-screen">
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body
+    class="bg-gradient-to-br from-green-900 via-green-800 to-green-900 min-h-screen"
+  >
     <div class="container mx-auto px-4 py-8">
-        <div class="max-w-4xl mx-auto bg-black bg-opacity-50 rounded-xl p-8 backdrop-filter backdrop-blur-lg">
-            <div class="text-center mb-8">
-                <h1 class="text-6xl font-bold text-green-400 mb-4">$TOAD Token</h1>
-                <p class="text-xl text-green-200 mb-4">
-                    The Official Token of CHRYPNOTOAD
-                </p>
+      <div
+        class="max-w-4xl mx-auto bg-black bg-opacity-50 rounded-xl p-8 backdrop-filter backdrop-blur-lg"
+      >
+        <div class="text-center mb-8">
+          <h1 class="text-6xl font-bold text-green-400 mb-4">$TOAD Token</h1>
+          <p class="text-xl text-green-200 mb-4">
+            The Official Token of CHRYPNOTOAD
+          </p>
 
-                <div class="bg-green-900 bg-opacity-50 rounded-lg p-6 mb-8">
-                    <h3 class="text-2xl font-bold text-green-400 mb-4">Token Details</h3>
-                    <div class="text-white">
-                        <p class="mb-2">Contract Address:</p>
-                        <p class="text-green-400 break-all mb-4">7xn2T1x7xw5quHmzy2YvFWyFUNwp75fsw5bxiXGRpump</p>
-                        
-                        <div class="grid grid-cols-2 gap-4 mt-4">
-                            <div>
-                                <p class="font-bold mb-1">Network</p>
-                                <p class="text-green-400">Solana</p>
-                            </div>
-                            <div>
-                                <p class="font-bold mb-1">Token Type</p>
-                                <p class="text-green-400">SPL</p>
-                            </div>
-                        </div>
-                    </div>
+          <div class="bg-green-900 bg-opacity-50 rounded-lg p-6 mb-8">
+            <h3 class="text-2xl font-bold text-green-400 mb-4">
+              Token Details
+            </h3>
+            <div class="text-white">
+              <p class="mb-2">Contract Address:</p>
+              <p class="text-green-400 break-all mb-4">
+                7xn2T1x7xw5quHmzy2YvFWyFUNwp75fsw5bxiXGRpump
+              </p>
+
+              <div class="grid grid-cols-2 gap-4 mt-4">
+                <div>
+                  <p class="font-bold mb-1">Network</p>
+                  <p class="text-green-400">Solana</p>
                 </div>
-
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-8">
-                    <div class="bg-green-900 bg-opacity-50 rounded-lg p-6">
-                        <h3 class="text-2xl font-bold text-green-400 mb-2">Trade $TOAD</h3>
-                        <p class="text-white">Coming Soon</p>
-                    </div>
-                    <div class="bg-green-900 bg-opacity-50 rounded-lg p-6">
-                        <h3 class="text-2xl font-bold text-green-400 mb-2">Stake $TOAD</h3>
-                        <p class="text-white">Coming Soon</p>
-                    </div>
+                <div>
+                  <p class="font-bold mb-1">Token Type</p>
+                  <p class="text-green-400">SPL</p>
                 </div>
-
-                <a href="/" class="text-green-400 hover:text-green-300">← Back to Home</a>
+              </div>
             </div>
+          </div>
+
+          <div class="bg-green-900 bg-opacity-50 rounded-lg p-6 gap-8 mb-8">
+            <h3 class="text-2xl font-bold text-green-400 mb-3">Trade $TOAD</h3>
+            <a href="https://raydium.io/swap/?inputMint=7xn2T1x7xw5quHmzy2YvFWyFUNwp75fsw5bxiXGRpump&outputMint=sol" 
+               class="text-white hover:text-green-300 bg-green-500 hover:bg-green-400 py-2 px-4 rounded"
+               target="_blank">
+                Swap on Raydium
+            </a>
+          </div>
+
+          <div class="flex justify-center space-x-4 mt-8 mb-8">
+            <a href="https://dexscreener.com/solana/7xn2T1x7xw5quHmzy2YvFWyFUNwp75fsw5bxiXGRpump" 
+               class="text-green-400 hover:text-green-300" target="_blank">
+                DEX Screener
+            </a>
         </div>
+
+          <a href="/" class="text-green-400 hover:text-green-300"
+            >← Back to Home</a
+          >
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
