--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHRYPNOTOAD</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="icon" href="/favicon.png" type="image/png" />
     <style>
         @keyframes float {
             0% { transform: translateY(0px); }
