--- a/toad/index.html
+++ b/toad/index.html
@@ -8,6 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" sizes="16x16 32x32 48x48 64x64 128x128 256x256">
   </head>
   <body
     class="bg-gradient-to-br from-green-900 via-green-800 to-green-900 min-h-screen"
