remove nft stuff - toad

--- a/index.html
+++ b/index.html
@@ -24,23 +24,18 @@
                     Welcome to the official website of CHRYPNOTOAD
                 </p>
 
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-8">
+                <div class="grid grid-cols-1 gap-8 mb-8">
                     <a href="/toad" class="bg-green-900 bg-opacity-50 rounded-lg p-6 hover:bg-opacity-70 transition-all">
                         <h3 class="text-2xl font-bold text-green-400 mb-2">$TOAD Token</h3>
                         <p class="text-white">Contract Address:</p>
                         <p class="text-sm text-green-400 break-all">7xn2T1x7xw5quHmzy2YvFWyFUNwp75fsw5bxiXGRpump</p>
                     </a>
-                    <a href="/nft" class="bg-green-900 bg-opacity-50 rounded-lg p-6 hover:bg-opacity-70 transition-all">
-                        <h3 class="text-2xl font-bold text-green-400 mb-2">ChrypnoToads NFT</h3>
-                        <p class="text-white">Official NFT Collection</p>
-                        <p class="text-sm text-green-400">Explore the Collection</p>
-                    </a>
                 </div>
 
                 <div class="flex justify-center space-x-4 mt-8">
-                    <a href="https://twitter.com/ChryptoToad" 
+                    <a href="https://twitter.com/chrypnotoad" 
                        class="text-green-400 hover:text-green-300" target="_blank">
-                        Twitter
+                        Chrypnotoad on X
                     </a>
                     <a href="https://theerebusai.com/" 
                        class="text-green-400 hover:text-green-300" target="_blank">
