--- a/index.html
+++ b/index.html
@@ -3,47 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHRYPNOTOAD</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" sizes="16x16 32x32 48x48 64x64 128x128 256x256">
-    <style>
-        @keyframes float {
-            0% { transform: translateY(0px); }
-            50% { transform: translateY(-20px); }
-            100% { transform: translateY(0px); }
-        }
-        .floating { animation: float 3s ease-in-out infinite; }
-    </style>
+    <title>Chrypnotoad.com</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="bg-gradient-to-br from-green-900 via-green-800 to-green-900 min-h-screen">
-    <div class="container mx-auto px-4 py-8">
-        <div class="max-w-4xl mx-auto bg-black bg-opacity-50 rounded-xl p-8 backdrop-filter backdrop-blur-lg">
-            <div class="text-center mb-8">
-                <h1 class="text-6xl font-bold text-green-400 mb-4">CHRYPNOTOAD</h1>
-                <p class="text-xl text-green-200 mb-4">
-                    Welcome to the official website of CHRYPNOTOAD
-                </p>
+<body>
+    <header>
+        <div class="logo">
+            <h1>Chrypnotoad</h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html" class="active">Gallery</a></li>
+                <li><a href="toad.html">$Toad</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <!-- <li><a href="shop.html">Shop</a></li> --> <!-- For future use -->
+            </ul>
+        </nav>
+    </header>
 
-                <div class="grid grid-cols-1 gap-8 mb-8">
-                    <a href="/toad" class="bg-green-900 bg-opacity-50 rounded-lg p-6 hover:bg-opacity-70 transition-all">
-                        <h3 class="text-2xl font-bold text-green-400 mb-2">$TOAD Token</h3>
-                        <p class="text-white">Contract Address:</p>
-                        <p class="text-sm text-green-400 break-all">7xn2T1x7xw5quHmzy2YvFWyFUNwp75fsw5bxiXGRpump</p>
-                    </a>
-                </div>
+    <main>
+        <section class="hero">
+            <p>Explore my art collections</p>
+        </section>
 
-                <div class="flex justify-center space-x-4 mt-8">
-                    <a href="https://twitter.com/chrypnotoad" 
-                       class="text-green-400 hover:text-green-300" target="_blank">
-                        Chrypnotoad on X
-                    </a>
-                    <a href="https://theerebusai.com/" 
-                       class="text-green-400 hover:text-green-300" target="_blank">
-                        Erebus
-                    </a>
-                </div>
+        <section class="collection-tabs" id="collection-tabs">
+            <!-- Collection tabs will be dynamically generated here -->
+        </section>
+
+        <section class="gallery-container">
+            <div class="gallery-grid" id="gallery-container">
+                <!-- Gallery images will be loaded here -->
+            </div>
+        </section>
+    </main>
+
+    <div class="modal" id="artwork-modal">
+        <div class="modal-content">
+            <span class="close-modal">&times;</span>
+            <img src="" alt="" id="modal-image">
+            <h3 id="modal-title"></h3>
+            <p id="modal-description"></p>
+            <div class="modal-navigation">
+                <button id="prev-button" class="nav-button">Previous</button>
+                <span id="image-counter">1 / 50</span>
+                <button id="next-button" class="nav-button">Next</button>
             </div>
         </div>
     </div>
+
+    <footer>
+        <p>&copy; 2025 Chrypnotoad LLC. All rights reserved.</p>
+    </footer>
+
+    <script src="js/collections-config.js"></script>
+    <script src="js/gallery.js"></script>
 </body>
 </html>
