--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="index.html" class="active">Gallery</a></li>
                 <li><a href="toad.html">$Toad</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <!-- <li><a href="shop.html">Shop</a></li> --> <!-- For future use -->
+                <li><a href="shop.html">Shop</a></li>
             </ul>
         </nav>
     </header>
