--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">Gallery</a></li>
+                <li><a href="toad.html">$Toad</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
-                <!-- <li><a href="shop.html">Shop</a></li> --> <!-- For future use -->
+                <li><a href="shop.html">Shop</a></li>
             </ul>
         </nav>
     </header>
