--- a/toad.html
+++ b/toad.html
@@ -8,11 +8,26 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/styles.css">
+
     <link rel="icon" type="image/x-icon" href="/favicon.ico" sizes="16x16 32x32 48x48 64x64 128x128 256x256">
   </head>
   <body
     class="bg-gradient-to-br from-green-900 via-green-800 to-green-900 min-h-screen"
   >
+  <header>
+    <div class="logo">
+        <h1>Chrypnotoad</h1>
+    </div>
+    <nav>
+        <ul>
+            <li><a href="index.html" >Gallery</a></li>
+            <li><a href="toad.html" class="active">$Toad</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="shop.html">Shop</a></li>
+        </ul>
+    </nav>
+</header>
     <div class="container mx-auto px-4 py-8">
       <div
         class="max-w-4xl mx-auto bg-black bg-opacity-50 rounded-xl p-8 backdrop-filter backdrop-blur-lg"
