--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <p>&copy; 2025 Chrypnotoad LLC. All rights reserved.</p>
     </footer>
 
+    <script src="js/markdown-parser.js"></script>
     <script src="js/collections-config.js"></script>
     <script src="js/gallery.js"></script>
 </body>
